# Gemini-Chatbot

./: bot.py  pyproject.toml  requirements.txt
